je vais avoir deux icones un pour le patient déjà ajouter et un autre po

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,7 +3,8 @@
   "header": {
     "title": "MedicAssist",
     "chooseLanguage": "Choose language",
-    "patientHistory": "Patient History"
+    "addPatientHistory": "Add/Edit Patient History",
+    "viewPatientHistory": "View Patient History"
   },
   "languages": {
     "en": "English",
