--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,7 +3,7 @@
   "header": {
     "title": "MedicAssist",
     "chooseLanguage": "Choose language",
-    "addPatientHistory": "Add/Edit Patient History",
+    "addPatientHistory": "Add Patient",
     "viewPatientHistory": "View Patient History"
   },
   "languages": {
@@ -61,9 +61,16 @@
   },
   "patientHistory": {
     "title": "Patient Medical History",
+    "listDescription": "View and manage all saved patient records.",
     "description": "This information is saved locally on your device and is not shared.",
+    "addTitle": "Add New Patient Record",
+    "editTitle": "Edit Patient Record",
+    "addPatientButton": "Add New Patient",
+    "noRecords": "No patient records found.",
+    "confirmDelete": "Are you sure you want to delete this patient record?",
+    "deleteSuccessTitle": "Record Deleted",
     "saveSuccessTitle": "History Saved",
-    "saveSuccessDescription": "Your medical history has been successfully updated.",
+    "saveSuccessDescription": "The patient medical history has been successfully updated.",
     "form": {
       "fullName": "Full Name",
       "fullNamePlaceholder": "e.g., Jane Doe",
@@ -76,7 +83,15 @@
       "chronicConditionsPlaceholder": "e.g., Type 2 Diabetes, Hypertension",
       "previousSurgeries": "Previous Surgeries",
       "previousSurgeriesPlaceholder": "e.g., Appendectomy (2015), Knee surgery (2020)",
-      "saveButton": "Save History"
+      "saveButton": "Save History",
+      "cancelButton": "Cancel"
+    },
+    "table": {
+      "fullName": "Full Name",
+      "dateOfBirth": "Date of Birth",
+      "allergies": "Allergies",
+      "medications": "Medications",
+      "actions": "Actions"
     }
   }
 }
