--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -48,12 +48,16 @@
   },
   "nearbyLocations": {
     "title": "Établissements médicaux à proximité",
-    "note": "Note : Les données de localisation sont à des fins de démonstration uniquement. Une clé API Google Maps est requise pour une fonctionnalité complète.",
     "yourLocation": "Votre position",
     "types": {
       "hospital": "Hôpital",
       "pharmacy": "Pharmacie"
-    }
+    },
+    "apiKeyMissing": "La clé API Google Maps n'est pas configurée. Veuillez l'ajouter à vos variables d'environnement.",
+    "locationError": "Impossible d'accéder à votre position. Veuillez activer les services de localisation dans les paramètres de votre navigateur.",
+    "geolocationNotSupported": "La géolocalisation n'est pas prise en charge par ce navigateur.",
+    "fetchErrorTitle": "Impossible de récupérer les lieux à proximité",
+    "noResults": "Aucun établissement médical trouvé à proximité."
   },
   "footer": {
     "disclaimer": "MedicAssist est à titre informatif uniquement et ne constitue pas un avis, un diagnostic ou un traitement médical.",
@@ -105,5 +109,3 @@
     }
   }
 }
-
-    
