--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -46,19 +46,6 @@
   "firstAid": {
     "title": "Immediate First Aid Advice"
   },
-  "nearbyLocations": {
-    "title": "Nearby Medical Facilities",
-    "yourLocation": "Your Location",
-    "types": {
-      "hospital": "Hospital",
-      "pharmacy": "Pharmacy"
-    },
-    "apiKeyMissing": "Google Maps API Key is not configured. Please add it to your environment variables.",
-    "locationError": "Could not access your location. Please enable location services in your browser settings.",
-    "geolocationNotSupported": "Geolocation is not supported by this browser.",
-    "fetchErrorTitle": "Could not fetch nearby places",
-    "noResults": "No medical facilities found nearby."
-  },
   "footer": {
     "disclaimer": "MedicAssist is for informational purposes only and does not constitute medical advice, diagnosis, or treatment.",
     "copyright": "© {{year}} MedicAssist. All rights reserved."
@@ -79,6 +66,7 @@
     "deleteSuccessTitle": "Record Deleted",
     "saveSuccessTitle": "History Saved",
     "saveSuccessDescription": "The patient medical history has been successfully updated.",
+    "searchPlaceholder": "Search for a patient by name...",
     "analysisHistory": {
       "title": "View Analysis History",
       "date": "Analysis Date",
