--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -46,19 +46,6 @@
   "firstAid": {
     "title": "Conseils de premiers secours immédiats"
   },
-  "nearbyLocations": {
-    "title": "Établissements médicaux à proximité",
-    "yourLocation": "Votre position",
-    "types": {
-      "hospital": "Hôpital",
-      "pharmacy": "Pharmacie"
-    },
-    "apiKeyMissing": "La clé API Google Maps n'est pas configurée. Veuillez l'ajouter à vos variables d'environnement.",
-    "locationError": "Impossible d'accéder à votre position. Veuillez activer les services de localisation dans les paramètres de votre navigateur.",
-    "geolocationNotSupported": "La géolocalisation n'est pas prise en charge par ce navigateur.",
-    "fetchErrorTitle": "Impossible de récupérer les lieux à proximité",
-    "noResults": "Aucun établissement médical trouvé à proximité."
-  },
   "footer": {
     "disclaimer": "MedicAssist est à titre informatif uniquement et ne constitue pas un avis, un diagnostic ou un traitement médical.",
     "copyright": "© {{year}} MedicAssist. Tous droits réservés."
@@ -79,6 +66,7 @@
     "deleteSuccessTitle": "Dossier supprimé",
     "saveSuccessTitle": "Antécédents enregistrés",
     "saveSuccessDescription": "Les antécédents médicaux du patient ont été mis à jour avec succès.",
+    "searchPlaceholder": "Rechercher un patient par son nom...",
     "analysisHistory": {
       "title": "Voir l'historique des analyses",
       "date": "Date de l'analyse",
