ajouter la possibiliter de supprimer un patient dans la base de donnée

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -100,9 +100,9 @@
       "allergies": "Allergien",
       "medications": "Medikamente",
       "analysesCount": "Analysen",
-      "actions": "Aktionen"
+      "actions": "Aktionen",
+      "editAction": "Patient bearbeiten",
+      "deleteAction": "Patient löschen"
     }
   }
 }
-
-    
