--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -100,9 +100,9 @@
       "allergies": "Allergies",
       "medications": "Médicaments",
       "analysesCount": "Analyses",
-      "actions": "Actions"
+      "actions": "Actions",
+      "editAction": "Modifier le patient",
+      "deleteAction": "Supprimer le patient"
     }
   }
 }
-
-    
